changes in index.html

--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
 </head>
 
 <body>
-  <header class="header"> <!--Header -->
-    <img src="./assets/images/header.jpg" class="img-fluid" alt="header">
+  <div class="container">
+    <header class="header"> <!--Header -->
+      <img src="./assets/images/header.jpg" class="img-fluid" alt="header">
 
-    <nav class="navbar navbar-expand-md bg-dark border-bottom border-body mb-4" data-bs-theme="dark">
-      <div class="container-fluid">
+      <nav class="navbar navbar-expand-md bg-dark border-bottom border-body mb-4" data-bs-theme="dark"><!--Navbar -->
         <a class="navbar-brand" href="#"><img src="./assets/images/bootstrap-logo.svg" alt="logo" width="30" height="24"
             class="d-inline-block align-text-top">Bootstrap-Caffe</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbar-primary"
@@ -48,11 +48,11 @@
             </li>
           </ul>
         </div>
-      </div>
-    </nav>
-  </header> <!--Header -->
+      </nav> <!--Navbar -->
+    </header> <!--Header -->
+  </div>
 
-  <div class="container-fluid">
+  <div class="container">
     <div class="row">
       <main class="col-xxl-7 col-xl-8 mb-4"><!--Main -->
         <h5 class="mb-4 text-center">Welcome to Bootstrap-Caffe</h5>
@@ -198,7 +198,7 @@
     </div>
   </div>
 
-  <div class="container-fluid bg-dark" data-bs-theme="dark">
+  <div class="container bg-dark" data-bs-theme="dark">
     <footer class="py-3"><!--Footer -->
       <ul class="nav justify-content-center border-bottom pb-3 mb-3">
         <li class="nav-item"><a href="#" class="nav-link px-2 text-white">Home</a></li>
