refactor navbar layout for improved spacing and alignment

--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
 
       <nav class="navbar navbar-expand-md bg-dark border-bottom border-body mb-4" data-bs-theme="dark"><!--Navbar -->
         <a class="navbar-brand" href="#"><img src="./assets/images/bootstrap-logo.svg" alt="logo" width="30" height="24"
-            class="d-inline-block align-text-top">Bootstrap-Caffe</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbar-primary"
+            class="d-inline-block align-text-top mx-3">Bootstrap-Caffe</a>
+        <button class="navbar-toggler mx-3" type="button" data-bs-toggle="collapse" data-bs-target="#navbar-primary"
           aria-controls="navbar-primary" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
 
-        <div class="collapse navbar-collapse" id="navbar-primary">
+        <div class="collapse navbar-collapse mx-3" id="navbar-primary">
           <ul class="navbar-nav ms-auto mb-2 mb-lg-0 gap-4">
             <li class="nav-item">
               <a class="nav-link text-white" aria-current="page" href="#">Menu</a>
